--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,3 +1,77 @@
 body{
     margin: 0%;
+    padding: 0%;
+    background-color: aquamarine;
+}
+header{
+    background-color: orange;
+    height: 70px;
+    width: 100vw;
+}
+
+*:before,
+*:after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.menu_hamburguer {
+    background: #fff;
+    border-radius: 10%;
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    top: 9px;
+    right: 10px;
+    cursor: pointer;
+    box-shadow: 0 0 0 0px white, 0 0 0 0px white;
+    transition: box-shadow 1s ease-in-out;
+}
+.menu_hamburguer:hover{
+    box-shadow: 0 0 0 4px white, 0 0 0 4px white;
+    
+}
+.hamburguer{
+    display: block;
+    background: black;
+    width: 30px;
+    height: 3px;
+    position: relative;
+    top: 23px;
+    right: -11px;
+    transition: 0.5s ease-in-out;
+}
+
+.hamburguer:before,
+.hamburguer:after{
+    background-color: black;
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transition: 0.5s ease-in-out;
+}
+.hamburguer:before{
+    top: -10px
+}
+.hamburguer:after{
+    bottom: -10px;
+}
+.input-hamburguer{
+    display: none;
+}
+.input-hamburguer:checked ~ label .menu_hamburguer{
+    box-shadow: 0 0 0 130vw white, 0 0 0 130vw white;
+}
+.input-hamburguer:checked ~ label .hamburguer{
+    transform: rotate(45deg);
+}
+.input-hamburguer:checked ~ label .hamburguer:before{
+    transform: rotate(90deg);
+    top: 0;
+}
+.input-hamburguer:checked ~ label .hamburguer:after{
+    transform: rotate(90deg);
+    bottom: 0;
 }
