--- a/templates/home.html
+++ b/templates/home.html
@@ -6,9 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
-    <title>Fruto de Favela</title>
+    <title>Document</title>
 </head>
 <body>
-    fruto de favela
+    <header class="header" id="header-id">
+        <div class="logo_header" id="logo_header-id">
+
+        </div>
+        <nav class="nav-bar" id="nav-bar-id">
+            <input type="checkbox" class="input-hamburguer" id="input-hamburguer-id">
+            <label for="input-hamburguer-id" class="label-hamburguer">
+                <div class="menu_hamburguer" id="menu_hamburguer-id"> 
+                    <span class="hamburguer"></span>
+                </div>
+            </label>
+        </nav>
+    </header>
+    <section class="sec-inicio" id="sec-inicio-id">
+        <img src="" alt="">
+    </section>
 </body>
 </html>
