--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,15 @@
           <img src="{% static 'fotos/logo.PNG' %}" alt="" class="img-logo">      
         </div>
         <nav class="nav-bar" id="nav-bar-id">
-            
+
+            <div class="btn-pai">
+                <button class="btn btn-inicio" id="btn-inicio-id">Inicio</button>
+                <button class="btn btn-sobre_nos" id="btn-sobre_nos-id">Sobre nós</button>
+                <button class="btn btn-projetos" id="btn-projetos-id">Projetos</button>
+                <button class="btn btn-parcerias" id="btn-parcerias-id">Parcerias</button>
+                <button class="btn btn-contato" id="btn-contato-id">Contato</button>  
+            </div>  
+
            <input type="checkbox" class="input-hamburguer" id="input-hamburguer-id">
             <label for="input-hamburguer-id" class="label-hamburguer">
                 <div class="menu_hamburguer" id="menu_hamburguer-id"> 
@@ -25,7 +33,7 @@
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Sobre nós</a></li>
                 <li><a href="#">Projetos</a></li>
-                <li><a href="#">parcerias</a></li>
+                <li><a href="#">Parcerias</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
