--- a/static/css/home.css
+++ b/static/css/home.css
@@ -6,7 +6,6 @@ body{
 
 header{
     background-color: orange;
-    height: 70px;
     width: 100vw;
     display: flex;
     flex-direction: row;
@@ -14,7 +13,7 @@ header{
     align-items: center;
 }
 nav{
-    height: 70px;
+    /*height: 70px;*/
     width: 60vw;
     display: flex;
     align-items: center;
@@ -36,11 +35,11 @@ nav{
 
 .img-logo{
     max-width: 207px;
-    max-height: 70px;
+    max-height: 500px;
 }
 .img-inicio{
     width: 100vw;
-    height: 90vh;
+    /*height: 90vh;*/
 }
 
 .btn{
@@ -63,9 +62,11 @@ nav{
 
 /*Parte mobile*/
 
-@media(max-width: 450px){
+@media(max-width: 930px), (max-height: 450px){
     /*sessão inicio mobile*/
-
+    header{
+        height: 70px;
+    }
     .logo_header{
         width: 170px;
         height: 70px;
@@ -77,7 +78,7 @@ nav{
     }
     .img-inicio{
         max-width: 100vw;
-        height: 90vh;
+       /* height: 90vh;*/
     }
     
     .btn{
@@ -187,5 +188,18 @@ nav{
     /*menu hamburguer fim*/
 
     /*Sessão inicio parte mobile fim*/
+
 }
 /*parte mobile fim*/
+
+/*Parte tablet inicio*/
+@media(max-width: 1350px) and (min-width: 450px){
+    body{
+        background-color: red;
+    }
+    .btn-pai{
+        display: flex;
+        flex-direction: row;
+    }
+}
+/*Parte tablet fim*/
