sessão inicio + menu

--- a/templates/home.html
+++ b/templates/home.html
@@ -30,16 +30,17 @@
                 </div>
             </label>
             <ul class="ul-menu_mobile" id="ul menu_mobile-id">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Sobre nós</a></li>
-                <li><a href="#">Projetos</a></li>
-                <li><a href="#">Parcerias</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="#" class="a-menu">Inicio</a></li>
+                <li><a href="#" class="a-menu">Sobre nós</a></li>
+                <li><a href="#" class="a-menu">Projetos</a></li>
+                <li><a href="#" class="a-menu">Parcerias</a></li>
+                <li><a href="#" class="a-menu">Contato</a></li>
             </ul>
         </nav>
     </header>
     <section class="sec-inicio" id="sec-inicio-id">
         <img src="{% static 'fotos/foto-inicio.PNG' %}" alt="" class="img-inicio">
+        <img src="{% static 'fotos/logo.PNG' %}" alt="" class="img-logo_inicio">
     </section>
     
 </body>
