--- a/static/css/home.css
+++ b/static/css/home.css
@@ -11,6 +11,7 @@ header{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    max-height: 70px;
 }
 nav{
     /*height: 70px;*/
@@ -22,6 +23,9 @@ nav{
 
 /*sessão inicio desktop*/
 
+.sec-inicio{
+    position: relative;
+}
 .input-hamburguer{
     visibility: hidden;
     
@@ -40,6 +44,14 @@ nav{
 .img-inicio{
     width: 100vw;
     /*height: 90vh;*/
+}
+.img-logo_inicio{
+    position: absolute;
+    z-index: 2;
+    left: 15%;
+    top: 22%;
+    max-width: 70vw;
+    max-height: 70vh;
 }
 
 .btn{
@@ -80,7 +92,6 @@ nav{
         max-width: 100vw;
        /* height: 90vh;*/
     }
-    
     .btn{
         overflow: hidden;
         visibility: hidden;
@@ -119,7 +130,7 @@ nav{
     }
     .menu_hamburguer:hover{
         box-shadow: 0 0 0 4px white, 0 0 0 4px white;
-        
+        z-index: 1;
     }
     .hamburguer{
         display: block;
@@ -143,12 +154,17 @@ nav{
         z-index: 2;
         visibility: visible;
     }
-    a {
+    .a-menu {
         color: orange;
         display: block;
         margin-bottom: 1em;
         text-decoration: none;
+        z-index: 1;
     }
+    .a-menu:hover{
+        transform: scale(1.1);
+    }
+
     .hamburguer:before,
     .hamburguer:after{
         background-color: black;
@@ -201,5 +217,6 @@ nav{
         display: flex;
         flex-direction: row;
     }
+    
 }
 /*Parte tablet fim*/
