Sessão quem somos

--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header" id="header-id">
         <div class="logo_header" id="logo_header-id">
-          <img src="{% static 'fotos/logo.PNG' %}" alt="" class="img-logo">      
+          <img src="{% static 'fotos/FF_Logo_Horizontal.png' %}" alt="" class="img-logo">      
         </div>
         <nav class="nav-bar" id="nav-bar-id">
 
@@ -40,9 +40,59 @@
     </header>
     <section class="sec-inicio" id="sec-inicio-id">
         <img src="{% static 'fotos/foto-inicio.PNG' %}" alt="" class="img-inicio">
-        <img src="{% static 'fotos/logo.PNG' %}" alt="" class="img-logo_inicio">
+        <img src="{% static 'fotos/FF_Logo_Horizontal.png' %}" alt="" class="img-logo_inicio">
     </section>
-    
+    <section class="sec-quem_somos" id="sec-quem_somos-id">
+        <div class="div-quem_somos" id ="div-quem_somos-id">
+            <h2 class="h2-quem_somos">Quem somos</h2>
+            <p class="p-quem_somos">
+                Lorem ipsum dolor sit amet, consectetur 
+                adipisicing elit. Totam quasi dolorem aliquam
+                temporibus, reprehenderit modi omnis voluptas 
+                quis nulla consequatur, eaque quod voluptatum 
+                fugiat tempora exercitationem repudiandae, 
+                cupiditate deleniti aspernatur.
+                
+            </p>
+        </div>
+        <div class="tres_pilares">
+            <div class="pilar acolher" id="acolher-id">
+                <h2>Acolher</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Quod itaque eum vero quisquam? 
+                    Numquam corrupti mollitia assumenda minus odio 
+                    praesentium dolorum neque sit esse at iure hic, 
+                    eos obcaecati minima.
+                </p>
+            </div>
+            <div class="pilar desenvolver" id="desenvolver-id">
+                <h2>Desenvolver</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Quod itaque eum vero quisquam? 
+                    Numquam corrupti mollitia assumenda minus odio 
+                    praesentium dolorum neque sit esse at iure hic, 
+                    eos obcaecati minima.
+                </p>
+            </div>
+            <div class="pilar caminhar" id="caminhar-id">
+                <h2>Caminhar</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Quod itaque eum vero quisquam? 
+                    Numquam corrupti mollitia assumenda minus odio 
+                    praesentium dolorum neque sit esse at iure hic, 
+                    eos obcaecati minima.
+                </p>
+            </div>
+        </div>
+        <label for="">
+            <div class="btn-v_pai" id="btn-v_pai-id">
+                <div class="btn-v"></div>
+            </div>
+        </label>
+    </section>
 </body>
 
 
