--- a/static/css/home.css
+++ b/static/css/home.css
@@ -5,7 +5,7 @@ body{
 }
 
 header{
-    background-color: orange;
+    background-color: #F6921D;
     width: 100vw;
     display: flex;
     flex-direction: row;
@@ -19,6 +19,9 @@ nav{
     display: flex;
     align-items: center;
     justify-content: flex-end;
+}
+p{
+    font: Regular 12px/14px Trebuchet MS;
 }
 
 /*sessão inicio desktop*/
@@ -43,11 +46,12 @@ nav{
 }
 .img-inicio{
     width: 100vw;
-    /*height: 90vh;*/
+    object-fit: cover;
+    max-height: 100vh;
 }
 .img-logo_inicio{
     position: absolute;
-    z-index: 2;
+    z-index: 0;
     left: 15%;
     top: 22%;
     max-width: 70vw;
@@ -70,7 +74,74 @@ nav{
 }
 
 /*Sessão inicio desktop fim*/
+/*Sessão quem somos desktop */
+.sec-quem_somos{
+    background-color: #368687;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 500px;
+}
+.h2-quem_somos{
+    margin-left: 20px;
+    margin-right: 10px;
+}
+.p-quem_somos{
+    margin-left: 20px;
+    margin-right: 10px;
+}
+.tres_pilares{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    position: relative;
+    top: 21vh;
+    color: #FFFFFF;
+}
+.pilar{
+    max-width: 22vw;
+    box-sizing: border-box;
+    margin: 40px; 
+}
+.div-quem_somos{
+    max-width: 75vw;
+    border-radius: 25px;
+    background-color: white;
+    position: absolute;
+    top: -50px;
+    color: #368687;
+}
+.btn-v_pai{
+    position: absolute;
+    right: 50vw;
+    bottom: 3vh;
+    
+}
+.btn-v{
+    width: 30px;
+    height: 5px;
+    background-color: #FFFFFF;
+    margin:-5px;
+    transform: rotate(50deg);
+    position: relative;
+    border-radius: 20%;
+}
+.btn-v::after{
+    content: '';
+    display: block;
+    width: 30px;
+    height: 5px;
+    background-color: #FFFFFF;
+    transform: rotate(80deg);
+    position: absolute;
+    right: -12px;
+    top: -14px;
+    border-radius: 20%;
+}
 
+
+/*Sessão quem somos desktop fim*/
 
 /*Parte mobile*/
 
@@ -90,7 +161,7 @@ nav{
     }
     .img-inicio{
         max-width: 100vw;
-       /* height: 90vh;*/
+       height: 90vh;
     }
     .btn{
         overflow: hidden;
@@ -127,6 +198,7 @@ nav{
         cursor: pointer;
         box-shadow: 0 0 0 0px white, 0 0 0 0px white;
         transition: box-shadow 1.1s cubic-bezier(.19,1,.22,1);
+        z-index: 10;
     }
     .menu_hamburguer:hover{
         box-shadow: 0 0 0 4px white, 0 0 0 4px white;
@@ -141,9 +213,10 @@ nav{
         top: 23px;
         right: -11px;
         transition: 0.5s ease-in-out;
+        
     }
     .ul-menu_mobile{
-        position: absolute;
+        position: fixed;
         top: 30%;
         left: 42%;
         transform: translate(-50%, -50%);
@@ -155,11 +228,11 @@ nav{
         visibility: visible;
     }
     .a-menu {
-        color: orange;
+        color: #F6921D;
         display: block;
         margin-bottom: 1em;
         text-decoration: none;
-        z-index: 1;
+        z-index: 10;
     }
     .a-menu:hover{
         transform: scale(1.1);
@@ -204,7 +277,44 @@ nav{
     /*menu hamburguer fim*/
 
     /*Sessão inicio parte mobile fim*/
-
+     
+    /*Sessão Quem somos mobile */
+    .sec-quem_somos{
+        background-color: #368687;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+        max-height: 170vh;
+        min-height: 1200px;
+    }
+    .pilar{
+        max-width: 50vw;
+        box-sizing: border-box;
+        margin: 40px;
+        margin-left: 26vw;
+    }
+    .tres_pilares{
+        position: absolute;
+        top: 26vh;
+    }
+    .div-quem_somos{
+        max-width: 75vw;
+        border-radius: 25px;
+        background-color: white;
+        position: absolute;
+        top: -50px;
+    }
+    .h2-quem_somos{
+        margin-left: 20px;
+        margin-right: 10px;
+    }
+    .p-quem_somos{
+        margin-left: 20px;
+        margin-right: 10px;
+    }
+     
+    /*Seção Quem somos mobile fim*/
 }
 /*parte mobile fim*/
 
@@ -217,6 +327,38 @@ nav{
         display: flex;
         flex-direction: row;
     }
+    /*Sessão quem somos */
+    .sec-quem_somos{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #368687;
+        position: relative;
+        height: 60vh;
+        max-height: 100vh;
+        min-height: 800px;
+    }
+    .tres_pilares{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        position: relative;
+        top: 21vh;
+        margin-left: 10px;
+    }
+    .pilar{
+        max-width: 22vw;
+        box-sizing: border-box;
+        margin: 40px; 
+    }
+    .div-quem_somos{
+        max-width: 75vw;
+        border-radius: 25px;
+        background-color: white;
+        position: absolute;
+        top: -50px;
+    }
     
+    /*Sessão quem somos fim*/
 }
 /*Parte tablet fim*/
