--- a/templates/home.html
+++ b/templates/home.html
@@ -52,6 +52,18 @@
                 quis nulla consequatur, eaque quod voluptatum 
                 fugiat tempora exercitationem repudiandae, 
                 cupiditate deleniti aspernatur.
+                Lorem ipsum dolor sit amet, consectetur 
+                adipisicing elit. Totam quasi dolorem aliquam
+                temporibus, reprehenderit modi omnis voluptas 
+                quis nulla consequatur, eaque quod voluptatum 
+                fugiat tempora exercitationem repudiandae, 
+                cupiditate deleniti aspernatur.
+                Lorem ipsum dolor sit amet, consectetur 
+                adipisicing elit. Totam quasi dolorem aliquam
+                temporibus, reprehenderit modi omnis voluptas 
+                quis nulla consequatur, eaque quod voluptatum 
+                fugiat tempora exercitationem repudiandae, 
+                cupiditate deleniti aspernatur.
                 
             </p>
         </div>
