--- a/static/css/home.css
+++ b/static/css/home.css
@@ -5,8 +5,9 @@ body{
 }
 
 header{
+    overflow: hidden !important;
     background-color: #F6921D;
-    width: 100vw;
+    max-width: 100vw;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -14,7 +15,7 @@ header{
     max-height: 70px;
 }
 nav{
-    /*height: 70px;*/
+    overflow: hidden;
     width: 60vw;
     display: flex;
     align-items: center;
@@ -27,6 +28,7 @@ p{
 /*sessão inicio desktop*/
 
 .sec-inicio{
+    overflow: hidden;
     position: relative;
 }
 .input-hamburguer{
@@ -48,6 +50,7 @@ p{
     width: 100vw;
     object-fit: cover;
     max-height: 100vh;
+    margin-bottom: -4px;
 }
 .img-logo_inicio{
     position: absolute;
@@ -285,7 +288,7 @@ p{
         flex-direction: column;
         align-items: center;
         position: relative;
-        max-height: 170vh;
+        max-height: 170px;
         min-height: 1200px;
     }
     .pilar{
@@ -294,16 +297,20 @@ p{
         margin: 40px;
         margin-left: 26vw;
     }
-    .tres_pilares{
-        position: absolute;
-        top: 26vh;
-    }
     .div-quem_somos{
-        max-width: 75vw;
+       /* max-width: 75vw;*/
         border-radius: 25px;
         background-color: white;
         position: absolute;
         top: -50px;
+        overflow-y: scroll;
+        width: 700px;
+        height: 220px;
+        scrollbar-color: rebeccapurple green;
+    }
+    .tres_pilares{
+       position: absolute;
+       bottom: 0px;
     }
     .h2-quem_somos{
         margin-left: 20px;
