--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
+    <link rel="stylesheet" href="{% static 'fontes/Matapacos_FREE.ttf' %}">
     <title>Document</title>
 </head>
 <body>
@@ -67,6 +68,7 @@
                 
             </p>
         </div>
+       
         <div class="tres_pilares">
             <div class="pilar acolher" id="acolher-id">
                 <h2>Acolher</h2>
@@ -99,12 +101,180 @@
                 </p>
             </div>
         </div>
-        <label for="">
+         
             <div class="btn-v_pai" id="btn-v_pai-id">
                 <div class="btn-v"></div>
             </div>
-        </label>
+
     </section>
+
+   <section class="sec-programas">
+        <div class="div-h2Programas">
+            <h2 class="h2-programas">Nossos programas</h2>
+        </div>
+        <div class="slideContainer">
+                <div class="slidershow middle">
+
+                        <div class="slides">
+                            <input type="radio" name="r" id="r1" checked>
+                            <input type="radio" name="r" id="r2">
+                            <input type="radio" name="r" id="r3">
+                            <input type="radio" name="r" id="r4">
+                            <input type="radio" name="r" id="r5">
+
+                            <div class="slide s1">                                  
+                            <img src="{% static 'fotos/1.jpg' %}" alt="">
+                            </div>
+
+                            <div class="separador"></div>
+
+                            <div class="div-text">
+                            <h2>titulo-1</h2>
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur 
+                                adipisicing elit. Quasi unde possimus quae 
+                                atque sint? Non beatae ad, maiores iste similique 
+                                itaque qui, quisquam, laborum quod adipisci impedit 
+                                fugiat repudiandae corrupti!
+                                Lorem, ipsum dolor sit amet consectetur 
+                                adipisicing elit. Quasi unde possimus quae 
+                                atque sint? Non beatae ad, maiores iste similique 
+                                itaque qui, quisquam, laborum quod adipisci impedit 
+                                fugiat repudiandae corrupti!
+                                Lorem, ipsum dolor sit amet consectetur 
+                                adipisicing elit. Quasi unde possimus quae 
+                                atque sint? Non beatae ad, maiores iste similique 
+                                itaque qui, quisquam, laborum quod adipisci impedit 
+                                fugiat repudiandae corrupti!
+                            </p>
+                            </div>
+
+                            <div class="slide">
+                            <img src="{% static 'fotos/2.jpg' %}" alt="">
+                            </div>
+
+                            <div class="separador"></div>
+
+                            <div class="div-text">
+                            <h2>titulo-2</h2>
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur 
+                                adipisicing elit. Quasi unde possimus quae 
+                                atque sint? Non beatae ad, maiores iste similique 
+                                itaque qui, quisquam, laborum quod adipisci impedit 
+                                fugiat repudiandae corrupti!
+                                Lorem, ipsum dolor sit amet consectetur 
+                                adipisicing elit. Quasi unde possimus quae 
+                                atque sint? Non beatae ad, maiores iste similique 
+                                itaque qui, quisquam, laborum quod adipisci impedit 
+                                fugiat repudiandae corrupti!
+                                Lorem, ipsum dolor sit amet consectetur 
+                                adipisicing elit. Quasi unde possimus quae 
+                                atque sint? Non beatae ad, maiores iste similique 
+                                itaque qui, quisquam, laborum quod adipisci impedit 
+                                fugiat repudiandae corrupti!
+                            </p>
+                            </div>
+
+                            <div class="slide">
+                            <img src="{% static 'fotos/3.jpg' %}" alt="">
+                            </div>
+
+                            <div class="separador"></div>
+
+                            <div class="div-text">
+                            <h2>titulo-3</h2>
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur 
+                                adipisicing elit. Quasi unde possimus quae 
+                                atque sint? Non beatae ad, maiores iste similique 
+                                itaque qui, quisquam, laborum quod adipisci impedit 
+                                fugiat repudiandae corrupti!
+                                Lorem, ipsum dolor sit amet consectetur 
+                                adipisicing elit. Quasi unde possimus quae 
+                                atque sint? Non beatae ad, maiores iste similique 
+                                itaque qui, quisquam, laborum quod adipisci impedit 
+                                fugiat repudiandae corrupti!
+                                Lorem, ipsum dolor sit amet consectetur 
+                                adipisicing elit. Quasi unde possimus quae 
+                                atque sint? Non beatae ad, maiores iste similique 
+                                itaque qui, quisquam, laborum quod adipisci impedit 
+                                fugiat repudiandae corrupti!
+                            </p>
+                            </div>
+
+                            <div class="slide">
+                            <img src="{% static 'fotos/4.jpg' %}" alt="">
+                            </div>
+
+                            <div class="separador"></div>
+
+                            <div class="div-text">
+                            <h2>titulo-4</h2>
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur 
+                                adipisicing elit. Quasi unde possimus quae 
+                                atque sint? Non beatae ad, maiores iste similique 
+                                itaque qui, quisquam, laborum quod adipisci impedit 
+                                fugiat repudiandae corrupti!
+                                Lorem, ipsum dolor sit amet consectetur 
+                                adipisicing elit. Quasi unde possimus quae 
+                                atque sint? Non beatae ad, maiores iste similique 
+                                itaque qui, quisquam, laborum quod adipisci impedit 
+                                fugiat repudiandae corrupti!
+                                Lorem, ipsum dolor sit amet consectetur 
+                                adipisicing elit. Quasi unde possimus quae 
+                                atque sint? Non beatae ad, maiores iste similique 
+                                itaque qui, quisquam, laborum quod adipisci impedit 
+                                fugiat repudiandae corrupti!
+                            </p>
+                            </div>
+
+                            <div class="slide">
+                            <img src="{% static 'fotos/5.jpg' %}" alt="">
+                            </div>
+
+                            <div class="separador"></div>
+
+                            <div class="div-text">
+                            <h2>titulo-5</h2>
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur 
+                                adipisicing elit. Quasi unde possimus quae 
+                                atque sint? Non beatae ad, maiores iste similique 
+                                itaque qui, quisquam, laborum quod adipisci impedit 
+                                fugiat repudiandae corrupti!
+                                Lorem, ipsum dolor sit amet consectetur 
+                                adipisicing elit. Quasi unde possimus quae 
+                                atque sint? Non beatae ad, maiores iste similique 
+                                itaque qui, quisquam, laborum quod adipisci impedit 
+                                fugiat repudiandae corrupti!
+                                Lorem, ipsum dolor sit amet consectetur 
+                                adipisicing elit. Quasi unde possimus quae 
+                                atque sint? Non beatae ad, maiores iste similique 
+                                itaque qui, quisquam, laborum quod adipisci impedit 
+                                fugiat repudiandae corrupti!
+                            </p>
+                            </div>
+
+
+                        </div>   
+                        <div class="navigation" id="navigation-1">
+                                <label for="r1" class="bar"></label>
+                                <label for="r2" class="bar"></label>
+                                <label for="r3" class="bar"></label>
+                                <label for="r4" class="bar"></label>
+                                <label for="r5" class="bar"></label>
+                        </div>
+                </div>
+
+                
+                
+                      
+        </div>
+    </section>
+
+    <script src="{% static 'js/main.js' %}"></script>
 </body>
 
 
