--- a/static/css/home.css
+++ b/static/css/home.css
@@ -16,7 +16,6 @@ header{
 }
 nav{
     overflow: hidden;
-    /*width: 60vw;*/
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -97,6 +96,8 @@ p{
 }
 
 /*Sessão inicio desktop fim*/
+
+
 /*Sessão quem somos desktop */
 
 .sec-quem_somos{
@@ -190,8 +191,7 @@ p{
 }
 
 .slidershow{
-    max-width: 60vw;
-    min-width: 350px;
+    width: 780px;
     height: 50vh;
     overflow: hidden;
 }
@@ -220,9 +220,6 @@ p{
     margin: 0px;
 }
 
-.middle{
-   width: 50vw;
-}
 .navigation{
     position: absolute;
     bottom: -17vh;
@@ -283,17 +280,13 @@ input[name="p"]{
 }
 
 .slide{
-    width: 10%;
-    transition: 0.6s;
-    display: flex;
-    flex-direction: row;
-}
-.slide img{
-    /*width: 100%;
-    height: 100%;*/
     width: 400px;
     height: 380px;
-    /*margin-left: 10px;*/
+    transition: 0.6s;
+}
+.slide img{
+    width: 400px;
+    height: 380px;
     
 }
 
@@ -318,6 +311,10 @@ input[name="p"]{
 /*Sessão programas desktop fim*/
 
 /*Parte mobile*/
+
+body{
+    background-color: green;
+}
 
 @media(max-width: 930px), (max-height: 450px){
     /*sessão inicio mobile*/
@@ -406,7 +403,7 @@ input[name="p"]{
         display: block;
         margin-bottom: 1em;
         text-decoration: none;
-        z-index: 10;
+        /*z-index: 10;*/
     }
     .a-menu:hover{
         transform: scale(1.1);
@@ -433,6 +430,7 @@ input[name="p"]{
     }
     .input-hamburguer:checked ~ ul{
         opacity: 1;
+        z-index: 10;
     }
     .input-hamburguer:checked ~ label .menu_hamburguer{
         box-shadow: 0 0 0 130vw white, 0 0 0 130vw white;
@@ -459,31 +457,22 @@ input[name="p"]{
         flex-direction: column;
         align-items: center;
         position: relative;
-        /* max-height: 170px;*/
         min-height: 1450px;
     }
     .pilar{
         display: block;
         max-width: 50vw;
-        /*box-sizing: border-box;*/
         margin: 40px;
-       /* margin-left: 26vw;*/
     }
     .div-quem_somos{
-       /* max-width: 75vw;*/
         border-radius: 25px;
         background-color: white;
         position: absolute;
         top: -50px;
-       /* overflow-y: scroll;
-        width: 700px;
-        height: 220px;*/
         scrollbar-color: rebeccapurple green;
     }
     
     .tres_pilares{
-       /*position: absolute;
-       bottom: 0px;*/
        display: block;
        text-align: justify;
     }
@@ -500,9 +489,126 @@ input[name="p"]{
 
     /*Seção programas mobile inicio*/
     .sec-programas{
-        height: 100vh;
-        width: 100vw;
-    }
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: white;
+        min-height: 1100px;
+     }
+     
+     .div-h2Programas{
+         margin: 50px;
+     }
+     
+     .sec-programas h2{
+         color: #F6921D;
+     }
+     
+     .sec-programas p{
+         color: #F6921D;
+     }
+     
+     .slidershow{
+         width: 290px; 
+         height: 800px;
+         overflow: none;
+         position: relative;
+     }
+
+     .slideContainer{
+         display: flex;
+         flex-direction: column;
+     }
+     
+     .div-text{
+         width: 250px;
+         display: flex;
+         margin: 20px;
+         flex-direction: column;
+         
+     }
+     
+     .div-text h2{
+         margin: 0px;
+     }
+     
+     .navigation{
+         position: absolute;
+         transform: translateX(-50%);
+         display: flex;
+         z-index: 11;
+         top: 41%;
+         
+     }
+     .init{
+         margin-left: auto;
+     }
+     .end{
+         margin-right: auto;
+     }
+     
+     .b{
+      width: 100px;
+      height: 50px;
+     }
+     
+     .bar{
+         width: 10px;
+         height: 10px;
+         border: 2px solid orange;
+         margin: 6px;
+         cursor: pointer;
+         transition: 0.4s;
+         position: relative;
+         left: 0!important;
+         bottom: 0!important;
+     } 
+     .bar:hover{
+         background: orange;
+         transform: scale(1.5);
+     }
+       
+     input[name="r"]{
+         position: absolute;
+         visibility: hidden;
+     }
+     input[name="p"]{
+         position: absolute;
+         visibility: hidden;
+     }
+       
+     .slides{
+         width: 500%;
+         height: 100%;
+         display: flex;
+         flex-direction: column;
+     }
+     
+     .slide{
+         width: 400px;
+         transition: 0.6s;
+        
+     }
+     .slide img{
+        width: 290px;
+        height: 270px;
+     }
+     
+     #r1:checked ~ .s1{   
+         margin-top: 0;
+     }
+     #r2:checked ~ .s1{
+         margin-top: -60%;
+     }
+     #r3:checked ~ .s1{
+         margin-top: -120%;
+     }
+     #r4:checked ~ .s1{
+         margin-top: -180%;
+     }
+     #r5:checked ~ .s1{
+         margin-top: -240%;
+     }
 
     
     /*Seção programas mobile inicio*/
@@ -510,7 +616,7 @@ input[name="p"]{
 /*parte mobile fim*/
 
 /*Parte tablet inicio*/
-@media(max-width: 1350px) and (min-width: 450px){
+@media(max-width: 1350px) and (min-width: 780px){
     body{
         background-color: red;
     }
@@ -557,7 +663,7 @@ input[name="p"]{
         display: flex;
         flex-direction: column;
         align-items: center;
-        height: 100vh;
+        
         position: relative;
         background-color: white;
      }
@@ -575,8 +681,7 @@ input[name="p"]{
      }
      
      .slidershow{
-         max-width: 80vw;
-         min-width: 780px;
+         width: 780px;
          height: 50vh;
          overflow: hidden;
      }
@@ -607,8 +712,8 @@ input[name="p"]{
      
      .navigation{
          position: absolute;
-         bottom: -17vh;
-         left: 47%;
+         bottom: -15%;
+         left: 40%;
          transform: translateX(-50%);
          display: flex;
      }
@@ -661,7 +766,6 @@ input[name="p"]{
      .slides{
          width: 500%;
          height: 100%;
-         /*display: flex;*/
      }
      
      .slide{
@@ -669,15 +773,10 @@ input[name="p"]{
          width: 400px;
          height: 380px;
          transition: 0.6s;
-         /*display: flex;
-         flex-direction: row;*/
      }
      .slide img{
-        /*width: 100%;
-        height: 100%;*/
         width: 400px;
         height: 380px;
-        /*margin-left: 10px;*/
      }
      
      #r1:checked ~ .s1{   
