--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,7 @@
         </nav>
     </header>
     <section class="sec-inicio" id="sec-inicio-id">
-        <img src="{% static 'fotos/foto-inicio.PNG' %}" alt="" class="img-inicio">
+        <img src="{% static 'fotos/ff.JPG' %}" alt="" class="img-inicio">
         <img src="{% static 'fotos/FF_Logo_Horizontal.png' %}" alt="" class="img-logo_inicio">
     </section>
     <section class="sec-quem_somos" id="sec-quem_somos-id">
@@ -300,7 +300,24 @@
             </form>
         </div>
     </section>
-   
+   <footer>
+
+       <div class="icone">
+           <img src="{% static 'fotos/instagram.svg' %}" alt="">
+           <ul>
+               <li>@frutodefavela</li>
+           </ul>
+       </div>
+
+       <div class="icone">
+           <img src="{% static 'fotos/whatsapp.svg' %}" alt="">
+           <ul>
+               <li>(81)9 9663-2650</li>
+               <li>(81)9 8873-2533</li>
+           </ul>
+       </div>
+
+   </footer>
     <script
         src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
