--- a/static/css/home.css
+++ b/static/css/home.css
@@ -358,6 +358,7 @@ input[name="p"]{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 20px 0px;
 }
 
 #sec-contato-id h2 {
@@ -643,7 +644,7 @@ footer li{
      
      .slidershow{
          width: 290px; 
-         height: 800px;
+         height: 870px;
          overflow: none;
          position: relative;
      }
@@ -670,7 +671,7 @@ footer li{
          transform: translateX(-50%);
          display: flex;
          z-index: 11;
-         top: 41%;
+         top: 36%;
          
      }
      .init{
