--- a/static/css/home.css
+++ b/static/css/home.css
@@ -324,6 +324,7 @@ input[name="p"]{
 #sec-parcerias-id h2 {
     width: 100%;
     text-align: center;
+    margin-bottom: 70px;
 }
 
 #parcerias {
@@ -459,8 +460,10 @@ footer li{
         max-height: 70px;
     }
     .img-inicio{
-        max-width: 100vw;
+        /*max-width: auto;*/
+        width: auto;
         height: 90vh;
+        
     }
     .btn{
         overflow: hidden;
@@ -591,7 +594,7 @@ footer li{
         flex-direction: column;
         align-items: center;
         position: relative;
-        min-height: 1450px;
+        /*min-height: 1450px;*/
     }
     .pilar{
         display: block;
